docs: update crowdin docker instructions again

--- a/doc/dev/features/i18n.md
+++ b/doc/dev/features/i18n.md
@@ -47,9 +47,17 @@ crowdin download
 
 These instructions assume `CROWDIN_PERSONAL_TOKEN` is available as an environment variable.
 
-### Step 1: set up container (with sources from local git repo)
+### Step 0: Generate i18n source files
 
-Create an interactive Docker container using the `crowdin/cli:latest` image, and mount `./i18n/locale/en` from the local Git repository to `/usr/crowdin-project/i18n/locale/en` inside the container.
+Create `locale/en` source files (`code.json` and `template.json`):
+
+```sh
+./build.sh i18n
+```
+
+### Step 1: Set up Docker container
+
+Create an interactive container using `crowdin/cli:latest`, mounting local files:
 
 ```sh
 docker run -it --rm --name crowdin-cli \
@@ -59,18 +67,20 @@ docker run -it --rm --name crowdin-cli \
   crowdin/cli:latest
 ```
 
-### Step 2: upload translations from local git repo to PixivFE crowdin project
+### Step 2: Upload local sources to Crowdin
+
+Update `locale/en` sources on the [Crowdin project](https://crowdin.com/project/pixivfe/sources/files):
 
 ```sh
-crowdin upload \
-  --verbose
+crowdin upload --verbose
 ```
 
-### Step 3: download translations from PixivFE crowdin project to local git repo
+### Step 3: Download translations to local repository
+
+Fetch new translations from [Crowdin](https://crowdin.com/project/pixivfe) and update non-English locales:
 
 ```sh
-crowdin download \
-  --verbose
+crowdin download --verbose
 ```
 
 ## Crowdin Web UI usage
