--- a/i18n/locale/en/code.json
+++ b/i18n/locale/en/code.json
@@ -57,14 +57,14 @@
   "server/routes/settings.go:NnZ0GDMrUsk": "Invalid artwork preview setting.",
   "server/routes/settings.go:OBoehD5INCU": "Image proxy server updated successfully.",
   "server/routes/settings.go:QRBr3yWUueA": "Invalid font type.",
-  "server/routes/settings.go:T6f0tUtdXlo": "\u003cdiv class=\"alert alert-danger alert-dismissible fade show mt-3\" role=\"alert\"\u003e%s\u003cbutton type=\"button\" class=\"btn-close\" data-bs-dismiss=\"alert\" aria-label=\"Close\"\u003e\u003c/button\u003e\u003c/div\u003e",
+  "server/routes/settings.go:T6f0tUtdXlo": "<div class=\"alert alert-danger alert-dismissible fade show mt-3\" role=\"alert\">%s<button type=\"button\" class=\"btn-close\" data-bs-dismiss=\"alert\" aria-label=\"Close\"></button></div>",
   "server/routes/settings.go:TVdIcN6qeEg": "Raw settings applied successfully.",
   "server/routes/settings.go:U78DghO-D70": "No such setting is available.",
   "server/routes/settings.go:Uva8MntftQ0": "Cannot authorize with supplied token.",
   "server/routes/settings.go:VgwxpccGkaw": "Cookie %s set successfully.",
   "server/routes/settings.go:Wtgdxy1i4XI": "Cookie %s cleared successfully.",
   "server/routes/settings.go:ZmGzoByKs64": "Thumbnails will now open in a new tab.",
-  "server/routes/settings.go:_jK8bxChHzU": "\u003cdiv class=\"alert alert-success alert-dismissible fade show mt-3\" role=\"alert\"\u003e%s\u003cbutton type=\"button\" class=\"btn-close\" data-bs-dismiss=\"alert\" aria-label=\"Close\"\u003e\u003c/button\u003e\u003c/div\u003e",
+  "server/routes/settings.go:_jK8bxChHzU": "<div class=\"alert alert-success alert-dismissible fade show mt-3\" role=\"alert\">%s<button type=\"button\" class=\"btn-close\" data-bs-dismiss=\"alert\" aria-label=\"Close\"></button></div>",
   "server/routes/settings.go:_rnu1mx961A": "Successfully logged out.",
   "server/routes/settings.go:opCtzPsSY5k": "You submitted an empty/invalid form.",
   "server/routes/settings.go:sFiBTMrk_Hs": "Novel view mode updated successfully.",
