--- a/i18n/locale/en/template.json
+++ b/i18n/locale/en/template.json
@@ -95,6 +95,12 @@
   "assets/views/fragments/novelseriescontents-tn.jet.html:NooTh9VgM88": "{{ .CharacterCount }} character(s)",
   "assets/views/fragments/novelseriescontents-tn.jet.html:TO0pDr53Qlg": "AI-generated",
   "assets/views/fragments/novelseriescontents-tn.jet.html:ddXHtNIdi1I": "{{ floor: .ReadingTime / 60 }} mins",
+  "assets/views/fragments/rankingCalendarNav.jet.html:1M6ol0VREOc": "Past month",
+  "assets/views/fragments/rankingCalendarNav.jet.html:5wshFbrK6SA": "Next",
+  "assets/views/fragments/rankingCalendarNav.jet.html:Bx3u5V34MxU": "Current",
+  "assets/views/fragments/rankingCalendarNav.jet.html:E4AxQgQvU4k": "Next month",
+  "assets/views/fragments/rankingCalendarNav.jet.html:_HTizIhVMY8": "Past",
+  "assets/views/fragments/rankingCalendarNav.jet.html:f--id11fyes": "Current month",
   "assets/views/fragments/small-tn.jet.html:yTQShm_bVeU": "Deleted or Private",
   "assets/views/fragments/thumbnail-dt.jet.html:0wMo7aB_ylE": "{{ if .XRestrict == 1 }}R-18{{ else }}R-18G{{ end }}",
   "assets/views/fragments/thumbnail-dt.jet.html:R20Dy5iCS58": "AI",
@@ -187,11 +193,9 @@
   "assets/views/rank.jet.html:WUSSV_J9jQc": "Overall",
   "assets/views/rank.jet.html:k3WC4MfdRmk": "Choose specialized ranking categories. Only available when filtering for",
   "assets/views/rank.jet.html:nu2CR4aefnc": "Options",
-  "assets/views/rankingCalendar.jet.html:1M6ol0VREOc": "Past month",
   "assets/views/rankingCalendar.jet.html:1w6l6-nnIE4": "Close",
   "assets/views/rankingCalendar.jet.html:5Y1Bmae4KGU": "Mon",
   "assets/views/rankingCalendar.jet.html:BMR8WidgHn0": "Ranking options",
-  "assets/views/rankingCalendar.jet.html:E4AxQgQvU4k": "Next month",
   "assets/views/rankingCalendar.jet.html:I6Hm-v9QLgE": "Choose the time frame for the rankings.",
   "assets/views/rankingCalendar.jet.html:JQAXF-W9sos": "Sun",
   "assets/views/rankingCalendar.jet.html:L1ef_2BFV8U": "Reset filters",
@@ -201,7 +205,6 @@
   "assets/views/rankingCalendar.jet.html:WsnylUh5sTU": "Date (mm/dd/yyyy)",
   "assets/views/rankingCalendar.jet.html:XM3hntqJHwI": "Thu",
   "assets/views/rankingCalendar.jet.html:XUI6uC-lsWs": "Wed",
-  "assets/views/rankingCalendar.jet.html:f--id11fyes": "Current month",
   "assets/views/rankingCalendar.jet.html:fe7yaFIotRc": "Sat",
   "assets/views/rankingCalendar.jet.html:jt8Q5gsBtLc": "Fri",
   "assets/views/rankingCalendar.jet.html:nu2CR4aefnc": "Options",
@@ -316,6 +319,7 @@
   "assets/views/tag.jet.html:KxzN2IYf0k8": "Category",
   "assets/views/tag.jet.html:L1ef_2BFV8U": "Reset filters",
   "assets/views/tag.jet.html:Obw6P7wVCaA": "Tool",
+  "assets/views/tag.jet.html:Oe07WdOBCA8": "Search settings",
   "assets/views/tag.jet.html:PJEV4aV2rUM": "Posted before (format: yyyy-mm-dd)",
   "assets/views/tag.jet.html:R-DIbx-3Pww": "Advanced settings",
   "assets/views/tag.jet.html:RW_TxW_dRhk": "Results for #{{ .Tag.Name }}",
@@ -334,9 +338,12 @@
   "assets/views/unauthorized.jet.html:SNRVjaimXDQ": "You need to <a href=\"/settings#login\">log in</a> to use this feature.",
   "assets/views/user.jet.html:3_oq3Nw2b2U": "View on pixiv.net",
   "assets/views/user.jet.html:5xhgcv5yNyM": "Frequently used tags",
-  "assets/views/user.jet.html:DE_6yEPk4jA": "Illustrations and Manga",
+  "assets/views/user.jet.html:8ga3WlgRnzQ": "Illustrations and manga",
+  "assets/views/user.jet.html:9EbrMpLP6_U": "Bookmarks",
+  "assets/views/user.jet.html:P6fO_UTqr7E": "Manga",
   "assets/views/user.jet.html:b84CRs16kKI": "View all",
   "assets/views/user.jet.html:clIffJhX-50": "{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv",
+  "assets/views/user.jet.html:gEYVuWDipug": "Illustrations",
   "assets/views/user.jet.html:uWiQGCprNJE": "Novels",
   "assets/views/user.jet.html:xd9cjh9m0Go": "({{ .TranslatedName }})",
   "assets/views/userAtom.jet.html:2QTgs--d0aQ": "Pages: {{ .Pages }}",
