Refresh i18n strings on every build
need to have a better solution than this.

--- a/i18n/locale/en/template.json
+++ b/i18n/locale/en/template.json
@@ -23,14 +23,15 @@
   "assets/views/about.jet.html:tKm7xke_6wI": "くるくる〜くるくるりん",
   "assets/views/about.jet.html:wg8We13ZOls": "Server start time (UTC)",
   "assets/views/artwork.jet.html:-2KRdEtU64k": "Related works",
-  "assets/views/artwork.jet.html:6sXA4xXCLTo": "1 Comment",
-  "assets/views/artwork.jet.html:D8emsBY_7Kw": "There are no comments yet",
-  "assets/views/artwork.jet.html:Jq1xGMjEyj8": "{{ .Illust.Comments }} Comments",
-  "assets/views/artwork.jet.html:TIsc9iRqIMY": "Load more",
   "assets/views/artwork.jet.html:b84CRs16kKI": "View all",
-  "assets/views/artwork.jet.html:fnJ94hxr_mY": "The creator turned comments off",
-  "assets/views/artwork.jet.html:kWXvbLEFYeU": "0 Comments",
-  "assets/views/artwork.jet.html:ttKAnRBfCD4": "Deleted user",
+  "assets/views/blocks/comments.jet.html:6sXA4xXCLTo": "1 Comment",
+  "assets/views/blocks/comments.jet.html:D8emsBY_7Kw": "There are no comments yet",
+  "assets/views/blocks/comments.jet.html:TIsc9iRqIMY": "Load more",
+  "assets/views/blocks/comments.jet.html:ds1j5vEWN0M": "{{ commentCount }} Comments",
+  "assets/views/blocks/comments.jet.html:fnJ94hxr_mY": "The creator turned comments off",
+  "assets/views/blocks/comments.jet.html:kWXvbLEFYeU": "0 Comments",
+  "assets/views/blocks/comments.jet.html:ttKAnRBfCD4": "Deleted user",
+  "assets/views/blocks/pagination.jet.html:5_0Nu6UDODU": "No items to display.",
   "assets/views/blocks/pagination.jet.html:5wshFbrK6SA": "Next",
   "assets/views/blocks/pagination.jet.html:WPGYjwIlzWU": "1",
   "assets/views/blocks/pagination.jet.html:asZ0Jp7JdGw": "Go to Page",
@@ -139,11 +140,9 @@
   "assets/views/novel.jet.html:5BuXOpUUBZU": "Set the text orientation for novels. This affects how the text is displayed and read on the page.",
   "assets/views/novel.jet.html:5qh6DTE40q4": "Original",
   "assets/views/novel.jet.html:67Y9MFQiZr8": "{{ seriesWorks }} work in this series",
-  "assets/views/novel.jet.html:6sXA4xXCLTo": "1 Comment",
   "assets/views/novel.jet.html:78FGmOr-0IE": "Gothic",
   "assets/views/novel.jet.html:8Vjy7zy9rGk": "Force text orientation",
   "assets/views/novel.jet.html:AAUzc89Kce0": "Save",
-  "assets/views/novel.jet.html:D8emsBY_7Kw": "There are no comments yet",
   "assets/views/novel.jet.html:DSbUybBy_lY": "Font family",
   "assets/views/novel.jet.html:DccFH4IMd1Y": "Mincho",
   "assets/views/novel.jet.html:HrFnTRlm8Tw": "Horizontal",
@@ -151,19 +150,14 @@
   "assets/views/novel.jet.html:P33EwG7DZ4U": "Choose the font style for displaying novels. This affects the readability and aesthetic of the text.",
   "assets/views/novel.jet.html:QtkGA7_n_zc": "Don't force (default from Pixiv)",
   "assets/views/novel.jet.html:SxDzl-oxDjQ": "Uses the original text orientation as set by the author on Pixiv. This is the default option and respects the intended layout of the novel.",
-  "assets/views/novel.jet.html:TIsc9iRqIMY": "Load more",
   "assets/views/novel.jet.html:TO0pDr53Qlg": "AI-generated",
   "assets/views/novel.jet.html:V4wS40KMxiY": "A sans-serif font style that's clean and modern. It's commonly used for easy readability on digital screens, offering a contemporary appearance.",
   "assets/views/novel.jet.html:WudBe92dCk0": "Novel options",
   "assets/views/novel.jet.html:XuP13HdBQHI": "{{ floor: .Novel.ReadingTime / 60 }} mins",
   "assets/views/novel.jet.html:ZQwEm6eAScE": "A serif font style that resembles traditional Japanese printing. It's often used for formal or literary content, providing a classic and elegant look.",
-  "assets/views/novel.jet.html:ayOijBSDUpw": "{{ .Novel.CommentCount }} Comments",
-  "assets/views/novel.jet.html:fnJ94hxr_mY": "The creator turned comments off",
   "assets/views/novel.jet.html:fwJjmTkfPFo": "{{ seriesWorks }} works in this series",
-  "assets/views/novel.jet.html:kWXvbLEFYeU": "0 Comments",
   "assets/views/novel.jet.html:kZv9k39fa4s": "·",
   "assets/views/novel.jet.html:nu2CR4aefnc": "Options",
-  "assets/views/novel.jet.html:ttKAnRBfCD4": "Deleted user",
   "assets/views/novel.jet.html:y6pXNsQLNSg": "Forces the text to be displayed horizontally, left-to-right. This is common for most languages and easier to read on smaller screens or for those more accustomed to Western text layouts.",
   "assets/views/novelDiscovery.jet.html:6A6XAFPz7qQ": "Refresh",
   "assets/views/novelDiscovery.jet.html:ifjfMyvWvyA": "Discovery",
@@ -211,7 +205,6 @@
   "assets/views/rankingCalendar.jet.html:opAx4qE3evA": "Go",
   "assets/views/rankingCalendar.jet.html:pBEaeL69K7w": "Specialized ranking categories.",
   "assets/views/rankingCalendar.jet.html:xRwDHSMnIAE": "Ranking calendar",
-  "assets/views/rankingCalendar.jet.html:zWC2XCizj9g": "Ranking Calendar for {{ .ThisMonth.MonthLiteral }} {{ .Year }}",
   "assets/views/settings.jet.html:-KqJV0K6wKc": "Log in with your Pixiv account's cookie to access the features below. To learn how to obtain your cookie, please see <a href=\"https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/\">the guide on obtaining your PixivFE token</a>.",
   "assets/views/settings.jet.html:01ETImVdw20": "Make bulk changes to multiple preferences at once",
   "assets/views/settings.jet.html:0IsQoCb1wcs": "PIXIVFE_PROXY_CHECK_ENABLED=false",
