--- a/i18n/locale/vi-VN/code.json
+++ b/i18n/locale/vi-VN/code.json
@@ -35,7 +35,7 @@
   "server/audit/audit_log.go:PoqY_pYG5lo": "Không thể viết phản hồi vào file %s: %w",
   "server/middleware/router.go:HORkE0Obn1U": "Không thể điều hướng đến %s",
   "server/middleware/router.go:Z9UG-DYmQCk": "Không tìm thấy trang",
-  "server/routes/actions.go:2RxigvKdaDk": "Method not allowed",
+  "server/routes/actions.go:2RxigvKdaDk": "Không cho phép thực hiện phương thức",
   "server/routes/actions.go:PG4HiUvZvVA": "Không có ID nào được cung cấp.",
   "server/routes/artwork.go:X4U1Et_mKik": "ID không hợp lệ: %s",
   "server/routes/artworkMulti.go:X4U1Et_mKik": "ID không hợp lệ: %s",
@@ -46,25 +46,26 @@
   "server/routes/novelseries.go:SDTsP5wtaxQ": "Số trang không hợp lệ: %d",
   "server/routes/novelseries.go:X4U1Et_mKik": "ID không hợp lệ: %s",
   "server/routes/settings.go:0RPgv-6IAxw": "Tên cookie không hợp lệ: %s",
-  "server/routes/settings.go:15X5BX8vvQ8": "Image proxy server cleared.",
+  "server/routes/settings.go:15X5BX8vvQ8": "Máy chủ điều hướng ảnh đã được xóa.",
   "server/routes/settings.go:4F7Kj3e-yUw": "Thumbnails will now open in the same tab.",
   "server/routes/settings.go:AyMWW7nxXWU": "Artwork preview setting updated successfully.",
-  "server/routes/settings.go:GPdmvDrn7iQ": "All preferences have been reset to default values.",
+  "server/routes/settings.go:BtIHautDgn8": "Custom image proxy server set successfully.",
+  "server/routes/settings.go:GPdmvDrn7iQ": "Mọi tùy chỉnh đã được đặt về mặc định.",
   "server/routes/settings.go:HKOUYV3KgCg": "Novel font type updated successfully.",
   "server/routes/settings.go:IAiAFmtUNOM": "Successfully logged in.",
   "server/routes/settings.go:Mfb2_Q_Exhk": "Invalid view mode.",
   "server/routes/settings.go:NnZ0GDMrUsk": "Invalid artwork preview setting.",
   "server/routes/settings.go:OBoehD5INCU": "Image proxy server updated successfully.",
-  "server/routes/settings.go:QRBr3yWUueA": "Invalid font type.",
+  "server/routes/settings.go:QRBr3yWUueA": "Loại phông chữ không hợp lệ",
   "server/routes/settings.go:T6f0tUtdXlo": "<div class=\"alert alert-danger alert-dismissible fade show mt-3\" role=\"alert\">%s<button type=\"button\" class=\"btn-close\" data-bs-dismiss=\"alert\" aria-label=\"Close\"></button></div>",
   "server/routes/settings.go:TVdIcN6qeEg": "Raw settings applied successfully.",
   "server/routes/settings.go:U78DghO-D70": "Cài đặt này không tồn tại.",
   "server/routes/settings.go:Uva8MntftQ0": "Không thể xác minh bằng mã xác thực được cung cấp.",
-  "server/routes/settings.go:VgwxpccGkaw": "Cookie %s set successfully.",
-  "server/routes/settings.go:Wtgdxy1i4XI": "Cookie %s cleared successfully.",
+  "server/routes/settings.go:VgwxpccGkaw": "Cookie %s đã được tùy chỉnh thành công.",
+  "server/routes/settings.go:Wtgdxy1i4XI": "Cookie %s đã được xóa thành công.",
   "server/routes/settings.go:ZmGzoByKs64": "Thumbnails will now open in a new tab.",
   "server/routes/settings.go:_jK8bxChHzU": "<div class=\"alert alert-success alert-dismissible fade show mt-3\" role=\"alert\">%s<button type=\"button\" class=\"btn-close\" data-bs-dismiss=\"alert\" aria-label=\"Close\"></button></div>",
-  "server/routes/settings.go:_rnu1mx961A": "Successfully logged out.",
+  "server/routes/settings.go:_rnu1mx961A": "Đăng xuất thành công.",
   "server/routes/settings.go:opCtzPsSY5k": "Bạn đã gửi form trống/không hợp lệ.",
   "server/routes/settings.go:sFiBTMrk_Hs": "Novel view mode updated successfully.",
   "server/routes/settings.go:t7QGas4GB5o": "Filter settings updated successfully.",
