--- a/i18n/locale/zh-TW/code.json
+++ b/i18n/locale/zh-TW/code.json
@@ -49,6 +49,7 @@
   "server/routes/settings.go:15X5BX8vvQ8": "Image proxy server cleared.",
   "server/routes/settings.go:4F7Kj3e-yUw": "Thumbnails will now open in the same tab.",
   "server/routes/settings.go:AyMWW7nxXWU": "Artwork preview setting updated successfully.",
+  "server/routes/settings.go:BtIHautDgn8": "Custom image proxy server set successfully.",
   "server/routes/settings.go:GPdmvDrn7iQ": "All preferences have been reset to default values.",
   "server/routes/settings.go:HKOUYV3KgCg": "Novel font type updated successfully.",
   "server/routes/settings.go:IAiAFmtUNOM": "Successfully logged in.",
