--- a/i18n/locale/en/code.json
+++ b/i18n/locale/en/code.json
@@ -31,6 +31,7 @@
   "core/requests.go:y3v5nQwdU0s": "All tokens (%d) are timed out, resetting all tokens to their initial good state.\nConsider providing additional tokens in PIXIVFE_TOKEN or reviewing API request level backoff configuration.\nPlease refer the following documentation for additional information:\n- https://pixivfe-docs.pages.dev/hosting/obtaining-pixivfe-token/\n- https://pixivfe-docs.pages.dev/hosting/environment-variables/#exponential-backoff-configuration",
   "core/user.go:1itpJBE-3VI": "Invalid page number.",
   "core/user.go:T3RwaHcnsYQ": "Invalid work category: %#v. Only \"%s\", \"%s\", \"%s\", \"%s\", \"%s\" and \"%s\" are available",
+  "server/audit/audit_init.go:RVQo5OR9IKs": "failed to initialize zap logger: %w",
   "server/audit/audit_init.go:k5XgFtfJlBA": "failed to create response save directory: %w",
   "server/audit/audit_log.go:PoqY_pYG5lo": "failed to write response body to file %s: %w",
   "server/middleware/router.go:HORkE0Obn1U": "Failed to redirect to %s",
