--- a/i18n/locale/en/template.json
+++ b/i18n/locale/en/template.json
@@ -329,10 +329,13 @@
   "assets/views/tag.jet.html:yHft19aQloM": "Minimum image width",
   "assets/views/unauthorized.jet.html:Q84lx6mjuV0": "Unauthorized",
   "assets/views/unauthorized.jet.html:SNRVjaimXDQ": "You need to <a href=\"/settings#login\">log in</a> to use this feature.",
+  "assets/views/user.jet.html:3MldbPX4xm8": "Loading...",
   "assets/views/user.jet.html:3_oq3Nw2b2U": "View on pixiv.net",
   "assets/views/user.jet.html:5xhgcv5yNyM": "Frequently used tags",
+  "assets/views/user.jet.html:7i2xxiolkqI": "Follow",
   "assets/views/user.jet.html:8ga3WlgRnzQ": "Illustrations and manga",
   "assets/views/user.jet.html:9EbrMpLP6_U": "Bookmarks",
+  "assets/views/user.jet.html:KSE10VbnTzI": "Following",
   "assets/views/user.jet.html:P6fO_UTqr7E": "Manga",
   "assets/views/user.jet.html:b84CRs16kKI": "View all",
   "assets/views/user.jet.html:clIffJhX-50": "{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv",
