--- a/i18n/locale/en/template.json
+++ b/i18n/locale/en/template.json
@@ -77,6 +77,11 @@
   "assets/views/fragments/artwork.jet.html:lneZKL5BAhs": "Unable to load ugoira.",
   "assets/views/fragments/artwork.jet.html:wdfvt8ojJQg": "Liked",
   "assets/views/fragments/artwork.jet.html:xd9cjh9m0Go": "({{ .TranslatedName }})",
+  "assets/views/fragments/followButtons.jet.html:3MldbPX4xm8": "Loading...",
+  "assets/views/fragments/followButtons.jet.html:7i2xxiolkqI": "Follow",
+  "assets/views/fragments/followButtons.jet.html:KSE10VbnTzI": "Following",
+  "assets/views/fragments/followButtons.jet.html:cF0IhcaE7bA": "Toggle Dropdown",
+  "assets/views/fragments/followButtons.jet.html:nj_VCONbIS8": "Follow privately",
   "assets/views/fragments/mangaseries-tn.jet.html:MOr394XheVg": "Updated at {{ parseTime:.UpdateDate }}",
   "assets/views/fragments/mangaseries-tn.jet.html:rdsfrO3UF7Q": "Read from the beginning",
   "assets/views/fragments/mangaseries-tn.jet.html:y6M852MPotE": "{{ .Total }} Episode(s)",
@@ -329,13 +334,10 @@
   "assets/views/tag.jet.html:yHft19aQloM": "Minimum image width",
   "assets/views/unauthorized.jet.html:Q84lx6mjuV0": "Unauthorized",
   "assets/views/unauthorized.jet.html:SNRVjaimXDQ": "You need to <a href=\"/settings#login\">log in</a> to use this feature.",
-  "assets/views/user.jet.html:3MldbPX4xm8": "Loading...",
   "assets/views/user.jet.html:3_oq3Nw2b2U": "View on pixiv.net",
   "assets/views/user.jet.html:5xhgcv5yNyM": "Frequently used tags",
-  "assets/views/user.jet.html:7i2xxiolkqI": "Follow",
   "assets/views/user.jet.html:8ga3WlgRnzQ": "Illustrations and manga",
   "assets/views/user.jet.html:9EbrMpLP6_U": "Bookmarks",
-  "assets/views/user.jet.html:KSE10VbnTzI": "Following",
   "assets/views/user.jet.html:P6fO_UTqr7E": "Manga",
   "assets/views/user.jet.html:b84CRs16kKI": "View all",
   "assets/views/user.jet.html:clIffJhX-50": "{{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv",
